hard-gists/4972374/run.log
=== Docker Run Log for 4972374 ===
Started at: Mi 29. Okt 15:04:57 CET 2025

[2025-10-29 15:04:57] START: Running container for 4972374
[2025-10-29 15:04:58] SUCCESS: Container d95a063ab4a69bbbb127b4dc770527f119162c5a6a77fceb6105949100f9d544 started for 4972374
=== Container logs for 4972374 ===
  File "/snippet.py", line 124
    print 'All tests pass.'    
    ^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 4972374 ===
[2025-10-29 15:05:00] INFO: Container d95a063ab4a69bbbb127b4dc770527f119162c5a6a77fceb6105949100f9d544 has stopped
